# llvm-ptx-samples

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  common.mk
cmake/: CompileOpenCL.cmake  EmbedResource.cmake
common/: CMakeLists.txt  OCLSample.cpp  OCLSample.hpp  Sample.hpp
kernels/: Makefile
kernels/matrix-multiply/: Makefile  matrix-multiply.cpp  matrix-multiply.kernel.cpp
kernels/matrix-multiply-tiled/: Makefile  matrix-multiply-tiled.cpp  matrix-multiply-tiled.kernel.cpp
kernels/vector-add/: Makefile  vector-add.cpp  vector-add.kernel.cpp
opencl/: CMakeLists.txt
opencl/blur2d/: CMakeLists.txt  blur2d.cpp  blur2d_kernel.cl
opencl/matmul/: CMakeLists.txt  matmul.cpp  matmul_kernel.cl
opencl/matmul-double/: CMakeLists.txt  matmul-double.cpp  matmul-double_kernel.cl
